Fix header alignment for larger displays

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -5,6 +5,8 @@
   width: 100vw;
   padding-top: 20px;
   z-index: 10;
+  display: flex;
+  justify-content: center;
 }
 
 .header
@@ -13,4 +15,5 @@
   margin: 0 4.5rem;
   padding-top: .5rem;
   max-width: 1920px;
+  width: 100vw;
 }
